1.3.11.dev0
 * #193: Pass through several "borg list" flags like --short, --format, --sort-by, --first, --last,
   etc. via borgmatic list command-line flags.

1.3.10
 * #198: Fix for Borg create error output not showing up at borgmatic verbosity level zero.

1.3.9
 * #195: Switch to command-line actions as more traditional sub-commands, e.g. "borgmatic create",
   "borgmatic prune", etc. However, the classic dashed options like "--create" still work!

1.3.8
 * #191: Disable console color via "color" option in borgmatic configuration output section.

1.3.7
 * #196: Fix for unclear error message for invalid YAML merge include.
 * #197: Don't color syslog output.
 * Change default syslog verbosity to show errors only.

1.3.6
 * #53: Log to syslog in addition to existing console logging. Add --syslog-verbosity flag to
   customize the log level. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/inspect-your-backups/
 * #178: Look for .yml configuration file extension in addition to .yaml.
 * #189: Set umask used when executing hooks via "umask" option in borgmatic hooks section.
 * Remove Python cache files before each Tox run.
 * Add #borgmatic Freenode IRC channel to documentation.
 * Add Borg/borgmatic hosting providers section to documentation.
 * Add files for building documentation into a Docker image for web serving.
 * Upgrade project build server from Drone 0.8 to 1.1.
 * Build borgmatic documentation during continuous integration.
 * We're nearly at 500 ★s on GitHub. We can do this!

1.3.5
 * #153: Support for various Borg directory environment variables (BORG_CONFIG_DIR, BORG_CACHE_DIR,
   etc.) via options in borgmatic's storage configuration.
 * #177: Fix for regression with missing verbose log entries.

1.3.4
 * Part of #125: Color borgmatic (but not Borg) output when using an interactive terminal.
 * #166: Run tests for all installed versions of Python.
 * #168: Update README with continuous integration badge.